--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // 나중에 test 코드를 db포함해서 적용해야될 때 따로 추가한 인메모리 DB
+    runtimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
